# lua-clhash

./: CMakeLists.txt  README.markdown
src/: lclhash.c
